--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Roboto&display=swap');
+/* css codes in here are universal across all of your app */
 .App {
   text-align: center;
-}
+  /* font-family: 'Oswald';
+  background-color: #282c34; */
 
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
